# smarty

./: OpenCV_Object_Detection.py  OpenCV_VideoMasking.py  README.md  RPi+OpenCV_Object_Detection.py
GazeboSmartyFiles/src/smarty_control/: CMakeLists.txt  package.xml
GazeboSmartyFiles/src/smarty_description/: CMakeLists.txt  package.xml
GazeboSmartyFiles/src/smarty_description/urdf/: smarty.xacro
GazeboSmartyFiles/src/smarty_gazebo/: CMakeLists.txt  package.xml
GazeboSmartyFiles/src/smarty_gazebo/launch/: smarty_world.launch
GazeboSmartyFiles/src/smarty_gazebo/worlds/: smarty.world
catkin_ws/src/smarty_msgs/msg/: data.msg
catkin_ws/src/smartytbt/: CMakeLists.txt  instructions.txt  package.xml  readme.txt
catkin_ws/src/smartytbt/launch/: load_urdf_into_rviz.launch  tbt_gazebo.launch
catkin_ws/src/smartytbt/rviz/: urdf.rviz
catkin_ws/src/smartytbt/scripts/: smarty_follow_user.py  smarty_object_detection.py  (+2 more)
smartytbt/: CMakeLists.txt  instructions.txt  package.xml
smartytbt/launch/: smartytbt_gazebo.launch  smartytbt_world.launch
smartytbt/scripts/: camera_output.py  smarty_object_detection.py  smarty_person_control.py  smarty_select_object.py
smartytbt/urdf/: smartytbt.urdf  user.urdf
src/smarty_msgs/: CMakeLists.txt  package.xml
src/smartytbt/: CMakeLists.txt  instructions.txt
src/smartytbt/launch/: smartytbt_gazebo.launch  tbt_gazebo_groups.launch
src/smartytbt/scripts/: camera_output.py  smarty_follow_user.py  smarty_select_user.py  usertbt_teleop.py
src/smartytbt/urdf/: smartytbt.urdf
src/smartytbt/worlds/: tbt.world
(+4 files in other folders)
